--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "@wemake-services/eslint-config-javascript": "^2.1.1",
     "@wemake-services/eslint-config-typescript": "^3.1.1",
     "@wemake-services/stylelint-config-scss": "^4.0.1",
     "eslint": "^8.56.0",
